--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="contact">Kontakt</string>
     <string name="work">Arbeit</string>
-    <string name="edu">Ausbildung</string>
+    <string name="edu">Bildung</string>
     <string name="about">Über diese App</string>
     <string name="skills">Kenntnisse</string>
     <string name="call">Anrufen</string>
@@ -10,8 +10,7 @@
     <string name="next">Weiter</string>
     <string name="differentAccount">Zurück</string>
     <string name="noAccount">Noch kein Konto? Kontaktieren Sie mich</string>
-    <string name="prompt_password">Passwort</string>
-    <string name="sendMail">Email senden...</string>
+    <string name="sendMail">Email senden&#8230;&#8230;&#8230;</string>
     <string name="invalidUserError">Der Benutzer wurde nicht gefunden</string>
     <string name="noConnection">Es konnte keine Verbindung zum Server hergestellt werden</string>
     <string name="login">Anmelden</string>
@@ -26,15 +25,17 @@
     <string name="nekom_2">Web Entwicklung</string>
     <string name="work_head">Anstellungen</string>
     <string name="skill_android">Nach meinem Praktikum als PHP Entwickler begann ich im Jahr 2013 mit der Tätigkeit als Android-Entwickler bei der Firma Nekom. Dort setzten wir großteils interne Projekte und Showcases für den E-Commerce Bereich um.</string>
+    <string name="skill_android_rest">Das Google Volley Framework wurde in Verbindung mit der GSON Library für die Kommunikation zwischen App und Server verwendet.Dadurch können JSON basierte REST API\'s schnell und einfach angebunden werden.</string>
+    <string name="skill_android_ble">Im Zuge der Umsetzung eines Showcase konnte ich Erfahrung im Umgang mit Bluetooth Low Energy sammeln. Hierbei wurde ein Location Based Marketing Konzept unter Verwendung von Beacons umgesetzt.</string>
+    <string name="skill_android_security">Da bei den erstellten Anwendungen oftmals auch externe Zahlanbieter angebunden wurden, lag auch ein besonderes Augenmerk auf dem Aufbau einer sicheren Verbindung, sowie dem sensiblen Umgang mit Benutzerdaten am Gerät.</string>
     <string name="skill_php">Während meiner Anstellung bei der Firma akaryon GmbH arbeitete ich an mehreren PHP Projekten, von denen ich auch einige selbstständig Betreute. Dabei wurde das Framework CodeIgniter in Verbindung mit MySQL Datenbanken verwendet. Im Zuge des Praktikums, welches später in eine Geringfügige Anstellung während meines Studiums überging, konnte ich auch Erfahrung in der Frontend Entwicklung mit HTML/CSS und Javascript sammeln.</string>
-    <string name="skill_sketch">Da mein Interesse bei App-Projekten auch sehr dem UI und UX Design gilt, begann ich mich für die Erstellung von Icons und anderen Grafiken zu begeistern. Als Tool wählte ich hierzu Sketch, da es mir die Möglichkeit gibt, schnell einzelne Elemente aber auch Mockups und Designs für Apps zu erstellen.</string>
-    <string name="skill_git">Seit etwa einem Jahr benutze ich Git als Versionsverwaltung meiner Wahl. Grund dafür war zunächste eine Umstellung innerhalb des Unternehmens, besonders die Performance und die Art des Branching und Merging waren ausschlaggebende Punkte auch bei privaten Projekten umzusteigen.</string>
+    <string name="skill_sketch">Mein Interesse gilt bei App-Projekten auch immer sehr dem UI und UX Design. Dhaer begann ich mich für die Erstellung von Icons und anderen Grafiken zu begeistern. Als Tool wählte ich hierzu Sketch, da es mir die Möglichkeit gibt, schnell einzelne Elemente aber auch Mockups und Designs für Apps zu erstellen.</string>
+    <string name="skill_git">Seit etwa einem Jahr benutze ich Git als Versionsverwaltung meiner Wahl. Grund dafür war zunächst eine Umstellung innerhalb des Unternehmens, besonders die Performance und die Art des Branching und Merging waren dann allerdings ausschlaggebende Punkte auch bei privaten Projekten umzusteigen.</string>
     <string name="otherSkills">Anderes</string>
     <string name="interest_unity">In meiner Freizeit versuche ich mich an der Spiele-Entwicklung mit Unity. Gerade die graphische Komponente begeistert mich hier sehr, auch wenn ich leider mit keinem großen künstlerischen Talent gesegnet bin.</string>
     <string name="interest_ios">Auch die Entwicklung für Apple Geräte findet spätestens seit der Vorstellung von Swift meine Beachtung. Anhand einiger Tutorials habe ich mich bereits an kleineren Apps versucht.</string>
     <string name="interest_raspberry">Als zentrales Thema meiner Bachelorarbeit erforschte ich die Möglichkeit, aus dem Raspberry ein funktionsfähiges Tablet zu bauen und es zu vermarkten. Mittlerweile kümmert sich der kleine Bastelrechner in Verbindung mit einer Pumpe, einem Server und einer App um die Bewässerung unserer Pflanzen am Balkon.</string>
     <string name="interests">Interessen</string>
-    <string name="action_sign_in_short">Anmelden</string>
     <string name="noPinError">Bitte geben Sie Ihren Pin ein</string>
     <string name="invalidPinError">Der eingegebene Pin ist nicht korrekt</string>
     <string name="error_field_required">Geben Sie Ihren Benutzernamen ein</string>
@@ -46,6 +47,7 @@
     <string name="about_content5">Für den Augmented Reality Bereich wurde Wikitude verwendet. Da es sich um eine kostenlose Lizenz handelt wird das „Trial“ Wasserzeichen über das Bild gelegt.</string>
     <string name="aboutMe">Über mich</string>
     <string name="ar_hint">Scannen Sie das dafür vorgesehene Bild in der E-Mail.</string>
-
+    <string name="prompt_username">Benutzername</string>
+    <string name="Logout">Abmelden</string>
 
 </resources>
